<resources>
    <string name="app_name">My Passbook</string>

    //SplashScreen
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="splash_screen_title">My Passbook</string>
    <string name="Copyright">Agile Striders 2018 | all rights reserved </string>


    //Loging and Registrastion and Reset Password

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="username">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? REGISTER HERE! </string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>

    //Reset
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back to login]]></string>


    //Validations
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    //Settings
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="prompt_password">Prompt Password</string>
    <string name="btn_change_e">Change Email</string>
    <string name="btn_change_p">Change Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="hint_new_email">New Email</string>

    //Tips to Success
    <string name="title_activity_main">StudyingActivity</string>
    <string name="tab_text_1">Student</string>
    <string name="tab_text_2">Career</string>
    <string name="tab_text_3">Studying</string>

    <string name="SettingGoals"> 1. Imagine your ideal outcome.\n\n
                                2. Approach college with the right attitude.\n\n
                                3. Take charge of your education.\n\n
                                4. Get the "whys" right.\n\n
                                5. Focus on actually learning, not just on your grades.\n\n
                                6. Trust the small steps.\n\n
                                7. Dream bigger.\n\n
                                8. Stay mindful of negative self-talk.\n\n
                                9. Seek to master at least one skill better than anyone else you know.\n\n
                                10.Plan on amplifying your strengths.\n\n</string>

    <string name="CareerPreparation">
        1. Participate in hands-on learning experiences.\n\n
        2. Make a list of your skills and achievements, with specific examples.\n\n
        3. Take advantage of your schools career services.\n\n
        4. Practice showing eagerness and enthusiasm.\n\n
        5. Learn all you can about the places you most want to work.\n\n
        6. Purchase appropriate interview attire.\n\n
        7. Cultivate a professional attitude.\n\n
    </string>

    <string name="StudyingTips">
        1. Do the work.\n\n
        2. Minimize useless distractions.\n\n
        3. Find a few different quiet locations.\n\n
        4. Study no more than about 90 minutes at a time.\n\n
        5. Keep your body moving.\n\n
        6. Organize your notes.\n\n
        7. Stand up and explain it out loud.\n\n
        8. Seek help right away.\n\n
        9. Take advantage of your schools resources.\n\n
        10. Create flashcards.\n\n
    </string>


    // Calender
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>


    //Forum

    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>



</resources>
