<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logon"
            android:tint="@color/mdtp_white"/>

        <TextView
            android:id="@+id/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="120dp"
            android:fontFamily="sans-serif-medium"
            android:text="REGISTER"
            android:textColor="@color/button_color"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColor="@color/mdtp_white"
            android:textColorHint="@color/mdtp_white"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@color/mdtp_white"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/mdtp_white"
                android:textColorHint="@color/mdtp_white"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="16dp"
                android:drawableTint="@color/mdtp_white"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:textColor="@color/mdtp_white"
                android:textColorHint="@color/mdtp_white"
                android:drawableLeft="@drawable/ic_lock_outline_24dp"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/white"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/button_color"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/transparent"
            android:textStyle="bold"
            android:text="@string/btn_forgot_password"
            android:textColor="@color/button_color" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:text="@string/btn_link_to_login"
            android:textSize="15sp"
            android:textColor="@color/mdtp_white"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>

